[package]
name = "halo2_kzg_wasm"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acvm = "0.14.1"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
halo2_backend = { git = "https://github.com/Ethan-000/halo2_backend", tag = "v0.1.1", features = [
    "pse_halo2",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tokio = { version = "1.28.1", features = ["rt"] }
wasm-bindgen = { version = "0.2.87" }
